--- a/vue-springboot/vue-springboot-board/frontend/src/css/common.css
+++ b/vue-springboot/vue-springboot-board/frontend/src/css/common.css
@@ -138,17 +138,17 @@ a:hover {
   box-shadow: 0 20px 20px rgba(0, 0, 0, 0.08);
   border-radius: 3px;
 }
-.post-title {
+.board-title {
   font-size: 24px;
   font-weight: 600;
   margin-bottom: 0.5rem;
 }
-.post-contents {
+.board-contents {
   height: 160px;
   overflow-y: auto;
   font-size: 18px;
 }
-.post-time {
+.board-time {
   position: absolute;
   bottom: 4px;
   right: 5px;
